--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <h3>Todo List</h3>
+  <span>{{ this.date | date: 'yyyy / MM / dd '}}</span>
   <app-todo-list></app-todo-list>
 </div>
