--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -1,6 +1,7 @@
 ul{
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 li{
   background: #1b6d85;
@@ -24,4 +25,13 @@ button{
   color: #1b6d85;
   margin-left: 5px;
   font-weight: bold;
+}
+
+.clearBtn{
+  color: red;
+  font-size: 15px;
+  float: right;
+  cursor: pointer;
+  width: 100%;
+  margin: 15px 0;
 }
