ADD search in to-do list & FIX css

--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -35,3 +35,11 @@ button{
   width: 100%;
   margin: 15px 0;
 }
+
+.w100{
+  width: 100%;
+}
+
+span.finsihed{
+  color: #ffc107;  font-weight: bold;
+}
