ADD animation + css

--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -9,7 +9,9 @@ li{
   padding: 8px 15px;
   cursor: pointer;
 }
-
+li:hover{
+  background: #176578;
+}
 input, button {
   margin-top: 10px;
   padding: 5px 8px;
