--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,11 @@
 .container {
   text-align: center;
   max-width: 700px;
-  margin: 0 auto;
-  padding: 20px;
+  margin: 40px auto;
+  padding: 50px 20px;
   border :3px solid #94b4bd;
+  border-top: 20px dotted #333;
+  background: #fafafa;
 }
 
 h3 {
