--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -29,3 +29,8 @@
   <input type="text" placeholder="add new list" #newItem (keydown.enter)="onAddItem(newItem)">
   <button (click)="onAddItem(newItem)">ADD</button>
 </div>
+
+
+<div class="w100 logout">
+  <span (click)="onLogout()">Logout</span>
+</div>
