--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .container {
   text-align: center;
   max-width: 700px;
-  margin: 40px auto;
+  margin: 40px auto 20px;
   padding: 50px 20px;
   border :3px solid #94b4bd;
   border-top: 20px dotted #333;
