--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 
 <span class="spring"></span>
 <div class="container">
-  <!--
-    <span>{{ this.date | date: 'yyyy / MM / dd '}}</span>-->
+    <span>{{ date | date: 'yyyy / MM / dd '}}</span>
   <h3>Todo List</h3>
   <router-outlet></router-outlet>
 </div>
