--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -2,19 +2,21 @@ form {
   margin: 30px 0 0;
 
   label {
-    width: 80px;
-    display: inline-block;
-    text-align: right;
+    width: 30%;
+    max-width: 85px;
+    text-align: left;
+    font-size: 14px;
   }
 
   input {
-    width: 280px;
+    width: 70%;
+    max-width: 280px;
     text-align: left;
     background: none;
     border: none;
     border-bottom: 1px solid #ccc;
-    margin : 10px;
-    font-size: 15px;
+    margin : 10px 0 ;
+    font-size: 14px;
     padding: 5px 8px;
   }
 
