--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -3,18 +3,6 @@ ul{
   padding: 0;
   margin: 0;
 }
-li{
-  background: #fafafa;
-  color: #575757;
-  padding: 8px 15px;
-  cursor: pointer;
-  border-bottom: 1px solid #ccc;
-}
-
-li:hover{
-  border-bottom: 1px solid #333;
-  color: #000;
-}
 input, button {
   margin-top: 10px;
   padding: 5px 8px;
@@ -45,10 +33,10 @@ button{
   width: 100%;
 }
 
-span.finished, .logout > span{
-  color: #ffc107;  font-weight: bold;
-}
-
 .logout{
   margin-top: 30px;
+
+  span{
+    color: #ffc107;  font-weight: bold;
+  }
 }
