--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,14 +1,17 @@
+<h3> Sign in </h3>
 <form (ngSubmit)="onLogin(f)" #f="ngForm">
 
   <div class="from-group">
-    <label for="id">ID : </label>
+    <label for="id">ID</label>
     <input id="id" name="id" type="text" ngModel/>
   </div>
   <div class="from-group">
-    <label for="password">password : </label>
+    <label for="password">password</label>
     <input id="password" name="password" type="password" ngModel/>
   </div>
 
-  <button type="button" #signupBtn routerLink="/signup">join us</button>
-  <button type="submit" >login</button>
+  <div class="btnWrap">
+    <button type="button" #signupBtn routerLink="/signup">JOIN US</button>
+    <button type="submit" >LOGIN</button>
+  </div>
 </form>
