--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -3,13 +3,16 @@
 <div class="form_wrap">
   <form (ngSubmit)="onSignup(f)" #f="ngForm">
     <div class="from-group">
-      <label for="id">ID : </label>
+      <label for="id">Email </label>
       <input id="id" name="id" type="text" ngModel/>
     </div>
     <div class="from-group">
-      <label for="password">password : </label>
+      <label for="password">Password</label>
       <input id="password" name="password" type="password" ngModel/>
     </div>
-    <button type="submit" >sign up</button>
+
+    <div class="btnWrap">
+      <button type="submit" >SIGN UP</button>
+    </div>
   </form>
 </div>
