--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -3,14 +3,14 @@
   <input type="text" placeholder="search the list" #searchItem (keyup)="onSearchItem(searchItem.value)">
 </div>
 <h3>< You have <span *ngIf="todoItem.length; else emptyTag"   >{{todoItem.length}} list</span> to do ></h3>
-<ul *ngFor="let item of todoItem">
-  <app-todo-item [item]="item" (click)="onItemClick(item)" [ngStyle]="{'display': item.hide  ? 'none' : 'block' }"></app-todo-item>
+<ul>
+  <app-todo-item *ngFor="let item of todoItem" [item]="item" (click)="onItemClick(item)" [ngStyle]="{'display': item.hide  ? 'none' : 'block' }"></app-todo-item>
 </ul>
 <ng-template #emptyTag> ** Nothing **</ng-template>
 
 <h3><<span *ngIf="clearItem.length;" >{{clearItem.length}} list</span> You Finished! ></h3>
-<ul *ngFor="let item of clearItem">
-  <app-todo-item [item]="item" (click)="onItemClick(item)"  [ngStyle]="{'display': item.hide  ? 'none' : 'block' }"></app-todo-item>
+<ul>
+  <app-todo-item *ngFor="let item of clearItem" [item]="item" (click)="onItemClick(item)"  [ngStyle]="{'display': item.hide  ? 'none' : 'block' }"></app-todo-item>
 </ul>
 
 <p *ngIf="!clearItem.length; else clearBtn">** You didn't finish yet? **</p>
