--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -37,6 +37,6 @@ button{
   margin-top: 30px;
 
   span{
-    color: #ffc107;  font-weight: bold;
+    color: #ffc107;  text-decoration: underline;
   }
 }
