--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,11 @@
 body{
   width:100%;
-  margin: 0;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+
+html{
+  background: url('../src/img/zzanggu.png') -4px 0;
+  background-size: 50px 50px;
 }
