--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../styles';
+
 .spring{
   display: block;
   max-width: 740px;
@@ -11,7 +13,7 @@
   max-width: 696px;
   margin: 0 auto 20px;
   padding: 50px 20px;
-  border :2px solid #94b4bd;
+  border :2px solid $paleGreen;
   border-top: none;
   background: #fafafa;
   position: relative;
