--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+$darkGreen: #176578;
+$paleGreen: #94b4bd;
+
 body{
   width:100%;
   margin: 0 auto;
@@ -6,6 +9,6 @@ body{
 
 
 html{
-  background: url('../src/img/zzanggu.png') -4px 0;
-  background-size: 50px 50px;
+/*  background: url('../src/img/zzanggu.png') -4px 0;
+  background-size: 50px 50px;*/
 }
