FIX button nested (#2) + etc(angular/package.json)

--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -33,10 +33,9 @@ form {
       background: $darkGreen;
       color: #fff;
     }
-  }
-
-  button[type="button"]{
-    margin-right: 10px;
+    &[type="button"]{
+      margin-right: 10px;
+    }
   }
 
 }
